alb-target-group.tf
resource "aws_lb_target_group" "wordpress" {
  name     = "wp-tg"
  port     = 80
  protocol = "HTTP"
  vpc_id  = aws_vpc.main.id

  health_check {
    path                = "/"
    healthy_threshold   = 2
    unhealthy_threshold = 2
    interval            = 60
    timeout             = 5
  }
}
